Fix Issue #5 #6 - missing background img grid_noise.png

--- a/static/css/wall.css
+++ b/static/css/wall.css
@@ -40,7 +40,7 @@ a {
 
 canvas{
   position:relative;
-  background-image: url(../images/grid_noise.png);
+  background-image: url(../img/grid_noise.png);
 }
 
 .move{
